Publish report for run 6 ccb82de80391a24145c6ad87707e3c2533006b36

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html><meta charset="utf-8"><title>E2E Reports</title>
 <style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:2rem}h1{margin:.2rem 0}.muted{color:#666}ul{line-height:1.8}</style>
 <h1>Test Reports</h1><p class="muted">History of published runs.</p><ul>
-<li><a href="runs/run-run-5/">run-run-5</a></li>
-<li><a href="runs/run-run-4/">run-run-4</a></li>
-<li><a href="runs/run-run-3/">run-run-3</a></li>
+<li><a href="runs/run-6/report.html">run-6</a></li>
+<li><a href="runs/run-5/report.html">run-5</a></li>
+<li><a href="runs/run-4/report.html">run-4</a></li>
+<li><a href="runs/run-3/report.html">run-3</a></li>
 </ul>
-<p class="muted">Latest: run-5 from <a href="https://github.com/delocalizer/gen3-testing/actions/runs/17522789940">this workflow run</a>.</p>
