--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html><meta charset="utf-8"><title>E2E Reports</title>
 <style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:2rem}h1{margin:.2rem 0}.muted{color:#666}ul{line-height:1.8}</style>
 <h1>Test Reports</h1><p class="muted">History of published runs.</p><ul>
+<li><a href="runs/run-7/report.html">run-7</a></li>
 <li><a href="runs/run-6/report.html">run-6</a></li>
 <li><a href="runs/run-5/report.html">run-5</a></li>
 <li><a href="runs/run-4/report.html">run-4</a></li>
